--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -112,6 +112,8 @@
   <ItemGroup>
     <Compile Include="Binding\BindingController.cs" />
     <Compile Include="Binding\IBindingOperation.cs" />
+    <Compile Include="LocalServices\IErrorListInfoBarController.cs" />
+    <Compile Include="LocalServices\ErrorListInfoBarController.cs" />
     <Compile Include="LocalServices\ISolutionBindingInformationProvider.cs" />
     <Compile Include="LocalServices\SolutionBindingInformationProvider.cs" />
     <Compile Include="MefServices\IInfoBar.cs" />
