--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -127,6 +127,7 @@
     <Compile Include="Framework\ConfigurableActiveSolutionBoundTracker.cs" />
     <Compile Include="Framework\ConfigurableBindingOperation.cs" />
     <Compile Include="Framework\ConfigurableConflictsManager.cs" />
+    <Compile Include="Framework\ConfigurableErrorListInfoBarController.cs" />
     <Compile Include="Framework\ConfigurableFileSystem.cs" />
     <Compile Include="Framework\ConfigurableHost.cs" />
     <Compile Include="Framework\ConfigurableIntegrationSettings.cs" />
