--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="Commands\CommandIds.cs" />
     <Compile Include="Commands\ProjectExcludePropertyToggleCommand.cs" />
+    <Compile Include="Commands\ProjectTestPropertySetCommand.cs" />
     <Compile Include="Commands\VsCommandBase.cs" />
     <Compile Include="Commands\ManageConnectionsCommand.cs" />
     <Compile Include="Commands\PackageCommandManager.cs" />
