--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -45,6 +45,7 @@
     <CodeAnalysisRuleSet>Integration.Vsix.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CollectionExtensions.cs" />
     <Compile Include="Commands\CommandIds.cs" />
     <Compile Include="Commands\ProjectExcludePropertyToggleCommand.cs" />
     <Compile Include="Commands\ProjectTestPropertySetCommand.cs" />
