Fix up tests; add ProjPropMgr tests

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Progress\ProgressNotificationListenerTests.cs" />
     <Compile Include="Progress\ProgressStepRunnerTests.cs" />
     <Compile Include="LocalServices\ProjectSystemFilterTests.cs" />
+    <Compile Include="ProjectPropertyManagerTests.cs" />
     <Compile Include="RuleSetHelperTests.cs" />
     <Compile Include="SanityTests.cs" />
     <Compile Include="Connection\ConnectionWorkflowTests.cs" />
