Move MEF components+tests into folder

--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -154,16 +154,16 @@
     <Compile Include="Progress\ProgressNotificationListenerTests.cs" />
     <Compile Include="Progress\ProgressStepRunnerTests.cs" />
     <Compile Include="LocalServices\ProjectSystemFilterTests.cs" />
-    <Compile Include="ProjectPropertyManagerTests.cs" />
+    <Compile Include="MefServices\ProjectPropertyManagerTests.cs" />
     <Compile Include="RuleSetHelperTests.cs" />
     <Compile Include="SanityTests.cs" />
     <Compile Include="Connection\ConnectionWorkflowTests.cs" />
     <Compile Include="Service\AuthenticationHeaderProviderTests.cs" />
     <Compile Include="Service\ConnectionInformationTests.cs" />
     <Compile Include="Binding\ProjectBindingOperation.WriterTests.cs" />
-    <Compile Include="ActiveSolutionTrackerTests.cs" />
+    <Compile Include="MefServices\ActiveSolutionTrackerTests.cs" />
     <Compile Include="Service\VersionHelperTests.cs" />
-    <Compile Include="ActiveSolutionBoundTrackerTests.cs" />
+    <Compile Include="MefServices\ActiveSolutionBoundTrackerTests.cs" />
     <Compile Include="State\StateManagerTests.cs" />
     <Compile Include="State\TransferableVisualStateTests.cs" />
     <Compile Include="TeamExplorer\ConnectSectionViewModelTests.cs" />
@@ -179,7 +179,7 @@
     <Compile Include="TeamExplorer\TeamExplorerControllerTests.cs" />
     <Compile Include="TelemetryLoggerAccessorTests.cs" />
     <Compile Include="UriExtensionsTests.cs" />
-    <Compile Include="VsSessionHostTests.cs" />
+    <Compile Include="MefServices\VsSessionHostTests.cs" />
     <Compile Include="VsShellUtilsTests.cs" />
     <Compile Include="WPF\BoolToVisibilityConverterTests.cs" />
     <Compile Include="Connection\UriValidatorTests.cs" />
