--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -45,7 +45,11 @@
     <CodeAnalysisRuleSet>Integration.Vsix.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommandIds.cs" />
+    <Compile Include="Commands\ProjectSonarLintMenuCommand.cs" />
+    <Compile Include="IEnumerableExtensions.cs" />
+    <Compile Include="Commands\PackageCommandId.cs" />
+    <Compile Include="Commands\ProjectExcludePropertyToggleCommand.cs" />
+    <Compile Include="Commands\ProjectTestPropertySetCommand.cs" />
     <Compile Include="Commands\VsCommandBase.cs" />
     <Compile Include="Commands\ManageConnectionsCommand.cs" />
     <Compile Include="Commands\PackageCommandManager.cs" />
