--- a/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
+++ b/src/Integration.Vsix.UnitTests/Integration.Vsix.UnitTests.csproj
@@ -103,6 +103,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\ManageConnectionsCommandTests.cs" />
+    <Compile Include="Commands\ProjectSonarLintMenuCommandTests.cs" />
     <Compile Include="Commands\ProjectTestPropertySetCommandTests.cs" />
     <Compile Include="Commands\ProjectExcludePropertyToggleCommandTests.cs" />
     <Compile Include="IEnumerableExtensionsTests.cs" />
