--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -128,7 +128,7 @@
     <Compile Include="Binding\ProjectBindingOperation.cs" />
     <Compile Include="Binding\ProjectBindingOperation.Writer.cs" />
     <Compile Include="MefServices\ProjectPropertyManager.cs" />
-    <Compile Include="RuleSetGroup.cs" />
+    <Compile Include="LanguageGroup.cs" />
     <Compile Include="ProfileConflicts\ConflictsManager.cs" />
     <Compile Include="ProfileConflicts\IConflictsManager.cs" />
     <Compile Include="ProfileConflicts\IRuleSetConflictsController.cs" />
@@ -161,6 +161,7 @@
     <Compile Include="Persistence\ISolutionBindingSerializer.cs" />
     <Compile Include="Progress\IProgressStepRunnerWrapper.cs" />
     <Compile Include="ProfileConflicts\RuleSetConflictsController.cs" />
+    <Compile Include="LanguageGroupHelper.cs" />
     <Compile Include="RuleSetHelper.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="LocalServices\ProjectSystemFilter.cs" />
