--- a/src/Integration.UnitTests/Integration.UnitTests.csproj
+++ b/src/Integration.UnitTests/Integration.UnitTests.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Framework\ConfigurableCredentialStore.cs" />
     <Compile Include="IServiceProviderExtensionsTests.cs" />
     <Compile Include="LanguageGroupHelperTests.cs" />
+    <Compile Include="LocalServices\ErrorListInfoBarController.QualityProfileBackgroundProcessorTests.cs" />
     <Compile Include="LocalServices\ErrorListInfoBarControllerTests.cs" />
     <Compile Include="LocalServices\RuleSetSerializerTests.cs" />
     <Compile Include="LocalServices\SolutionBindingInformationProviderTests.cs" />
