--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -69,8 +69,9 @@
     <Compile Include="Settings\OptionsPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SolutionAnalysisRequester\ISolutionAnalysisRequester.cs" />
     <Compile Include="SonarAnalyzerManager.cs" />
-    <Compile Include="SolutionAnalysisRequester.cs" />
+    <Compile Include="SolutionAnalysisRequester\SolutionAnalysisRequester.cs" />
     <Compile Include="Telemetry\GeneratedCode\SqmCommandFacade.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
