--- a/src/ProgressVS/ProgressVS.csproj
+++ b/src/ProgressVS/ProgressVS.csproj
@@ -58,6 +58,7 @@
     <Compile Include="InternalsVisibleTo.cs" />
     <Compile Include="ProgressController\DefaultProgressStepFactory.cs" />
     <Compile Include="ProgressController\ErrorNotification\VsActivityLogNotifier.cs" />
+    <Compile Include="ProgressController\ErrorNotification\VsOutputWindowPaneNotifier.cs" />
     <Compile Include="ProgressController\ErrorNotification\VsGeneralOutputWindowNotifier.cs" />
     <Compile Include="ProgressController\ErrorNotification\VsMessageBoxNotifier.cs" />
     <Compile Include="ProgressController\ProgressControllerStep.cs" />
