--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,10 @@
     <!-- Used to specify the default location to expand packages. -->
     <add key="repositorypath" value="packages" />
   </config>
+  <packageSources>
+    <!-- Add this repository to the list of available repositories -->
+    <add key="SonarSource - QA" value="https://repox.sonarsource.com/api/nuget/sonarsource-nuget-releases" />
+  </packageSources>
   <packageRestore>
     <!-- Allow NuGet to download missing packages -->
     <add key="enabled" value="True" />
