--- a/src/SonarAnalyzerEmbedder/packages.SonarAnalyzerEmbedder.CSharp.config
+++ b/src/SonarAnalyzerEmbedder/packages.SonarAnalyzerEmbedder.CSharp.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SonarAnalyzer.CSharp" version="1.18.0" targetFramework="net461" developmentDependency="true" />
+  <package id="SonarAnalyzer.CSharp" version="1.19.0-alpha06" targetFramework="net461" developmentDependency="true" />
 </packages>
