Bugfix: VSTS can't find nuget packages

--- a/nuget.config
+++ b/nuget.config
@@ -9,6 +9,7 @@
     <add key="SonarSource - QA" value="https://repox.sonarsource.com/api/nuget/sonarsource-nuget-releases" />
   </packageSources>
   <packageRestore>
+    <add key="All" value="(Aggregate source)" />
     <!-- Allow NuGet to download missing packages -->
     <add key="enabled" value="True" />
     <!-- Automatically check for missing packages during build in Visual Studio -->
