SVS-106: Customize the name field of the RuleSet file

--- a/src/Integration/Integration.csproj
+++ b/src/Integration/Integration.csproj
@@ -112,6 +112,7 @@
   <ItemGroup>
     <Compile Include="Binding\BindingController.cs" />
     <Compile Include="Binding\IBindingOperation.cs" />
+    <Compile Include="Binding\RuleSetInformation.cs" />
     <Compile Include="LocalServices\IErrorListInfoBarController.cs" />
     <Compile Include="LocalServices\ErrorListInfoBarController.cs" />
     <Compile Include="LocalServices\ISolutionBindingInformationProvider.cs" />
