--- a/src/Integration.Vsix/Integration.Vsix.csproj
+++ b/src/Integration.Vsix/Integration.Vsix.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <MinimumVisualStudioVersion>14.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion Condition=" $(VisualStudioVersion) == '14.0' ">14.0</MinimumVisualStudioVersion>
+    <MinimumVisualStudioVersion Condition=" $(VisualStudioVersion) == '15.0' ">15.0</MinimumVisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     <TargetFrameworkProfile />
   </PropertyGroup>
@@ -69,7 +70,10 @@
     <Compile Include="Settings\OptionsPage.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SolutionAnalysisRequester\RoslynRuntimeOptions.cs" />
     <Compile Include="SolutionAnalysisRequester\ISolutionAnalysisRequester.cs" />
+    <Compile Include="SolutionAnalysisRequester\IWorkspaceConfigurator.cs" />
+    <Compile Include="SolutionAnalysisRequester\WorkspaceConfigurator.cs" />
     <Compile Include="SonarAnalyzerManager.cs" />
     <Compile Include="SolutionAnalysisRequester\SolutionAnalysisRequester.cs" />
     <Compile Include="Telemetry\GeneratedCode\SqmCommandFacade.cs">
@@ -89,6 +93,7 @@
     <Compile Include="BoundSolutionAnalyzer.cs" />
     <Compile Include="Telemetry\SonarLintIntegrationPackage.IOleCommandTarget.cs" />
     <Compile Include="Telemetry\TelemetryLogger.cs" />
+    <Compile Include="VisualStudioConstants.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -97,10 +102,19 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="Telemetry\SonarLintSqmData.ttinclude" />
-    <None Include="source.extension.vsixmanifest">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
+  <Choose>
+    <When Condition="$(VisualStudioVersion) == '14.0'">
+      <ItemGroup>
+        <None Include="VS2015\source.extension.vsixmanifest" />
+      </ItemGroup>
+    </When>
+    <When Condition="$(VisualStudioVersion) == '15.0'">
+      <ItemGroup>
+        <None Include="VS2017\source.extension.vsixmanifest" />
+      </ItemGroup>
+    </When>
+  </Choose>
   <ItemGroup>
     <Reference Include="Google.Protobuf">
       <HintPath>..\..\binaries\Google.Protobuf.dll</HintPath>
@@ -295,6 +309,10 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
+  <PropertyGroup>
+    <PostBuildEvent Condition="$(VisualStudioVersion) == '14.0'">copy /y "$(TargetDir)SonarLint.vsix" "$(SolutionDir)..\binaries\SonarLint.2015.vsix"</PostBuildEvent>
+    <PostBuildEvent Condition="$(VisualStudioVersion) == '15.0'">copy /y "$(TargetDir)SonarLint.vsix" "$(SolutionDir)..\binaries\SonarLint.2017.vsix"</PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
